src/test/ui/rfc-2008-non-exhaustive/enum.stderr
error[E0004]: non-exhaustive patterns: `_` not covered
  --> $DIR/enum.rs:9:11
   |
LL |     match enum_unit {
   |           ^^^^^^^^^ pattern `_` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error: aborting due to previous error

For more information about this error, try `rustc --explain E0004`.
